--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,10 +4,9 @@ services:
   web:
     build: .
     container_name: django_web
-    command: python src/manage.py runserver 0.0.0.0:8000
+    command: python /app/manage.py runserver 0.0.0.0:8000
     volumes:
-      - ./src/app:/app/src
-      - ./csv_input:/app/csv_input
+      - ./src:/app
     ports:
       - "8000:8000"
     depends_on:
